--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "__locale": "c",
         "ios": "c",
         "minishell.h": "c",
-        "libft.h": "c"
-    }
+        "libft.h": "c",
+        "__tuple": "c",
+        "array": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
