--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "libft.h": "c",
-    "minishell.h": "c"
+    "minishell.h": "c",
+    "locale": "c",
+    "string": "c"
   }
 }
