--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
     "utility": "c",
     "fcntl.h": "c",
     "stdbool.h": "c",
-    "sstream": "c"
+    "sstream": "c",
+    "__node_handle": "c"
   }
 }
