--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: hamrachi <hamrachi@student.42.fr>          +#+  +:+       +#+         #
+#    By: yojablao <yojablao@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/04 17:54:43 by hamrachi          #+#    #+#              #
-#    Updated: 2023/12/12 21:31:19 by hamrachi         ###   ########.fr        #
+#    Updated: 2024/11/01 01:08:19 by yojablao         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ FLAGS = -Wall -Wextra -Werror
 
 SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
 ft_isprint.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strchr.c ft_strdup.c \
-ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c \
+ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strcmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c \
 ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
 ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 
@@ -34,7 +34,7 @@ all : ${NAME}
 %.o : %.c libft.h
 	${CC} ${FLAGS} -c $< -o $@
 
-${NAME} : ${OBJS}
+${NAME} : ${OBJS} bonus
 	ar rc ${NAME} ${OBJS}
 	
 bonus : ${OBJBONUS}
