--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
     "string": "c",
     "string_view": "c",
     "unordered_map": "c",
-    "vector": "c"
+    "vector": "c",
+    "minishell.h": "c"
   }
 }
